# activity-visual-dashboard

./: README.md
EdManiaApi/: db.sqlite3  pyproject.toml  render.yaml  requirements.txt
EdManiaApi/api/: settings.py  swaggerConfig.py  urls.py
EdManiaApi/application/: admin.py  dumpfile.py  forms.py  models.py  schemas.py  serializers.py  urls.py  views.py
EdManiaApi/application/migrations/: 0001_initial.py  0002_userchild_userchildactivity.py  0003_userchilddailyactivy.py  0004_activities.py  0005_rename_userchilddailyactivy_userchilddailyactivity.py  0006_userchild_dateofbirth.py  0007_delete_activities_and_more.py  0008_activities_childactivity_userchild_childdayacitivity_and_more.py  0009_rename_childdayacitivity_childdayactivity.py
MyEdManiaClient/: app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
MyEdManiaClient/Types/: General.ts  UserDetails.ts
MyEdManiaClient/assets/styles/: global.css
MyEdManiaClient/components/Cards/: ActivityCard.vue
MyEdManiaClient/components/Charts/: HourLineChart.vue  PointsLineChart.vue  SkeletonChart.vue
MyEdManiaClient/components/Icons/: Account.vue  Activity.vue  Dots.vue  Eye.vue  EyeSlash.vue  Login.vue  Report.vue  Users.vue
MyEdManiaClient/components/Layouts/: AppNavBar.vue  NavBar.vue
MyEdManiaClient/components/Modals/: AddChild.vue  SelectActivity.vue
MyEdManiaClient/layouts/: app.vue  default.vue
MyEdManiaClient/pages/: activities.vue  index.vue  reports.vue  users.vue
MyEdManiaClient/plugins/: user.client.ts
MyEdManiaClient/store/: user_store.ts
(+4 files in other folders)
